# rendering-algorithms

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: imgfile.hpp
install/: example_01_elementary_01__dots  example_01_elementary_02__line_of_dots  example_01_elementary_03__naive_line_algo  example_01_elementary_04__bresenham_defect_line  example_01_elementary_05__bresenham_int_line  example_01_elementary_06__bresenham_circles  example_01_elementary_07__triangles  example_02_shapes_08__filling_triangle_naive  example_02_shapes_09__triangle_line_sweeping_ph01  example_02_shapes_10__triangle_line_sweeping_ph02  example_02_shapes_11__triangle_line_sweeping_full  example_03_clpping_12__cutting  example_03_clpping_13__cohen_sutherland_aim_before  example_03_clpping_14__cohen_sutherland_aim_after  example_03_clpping_15__cohen_sutherland_cross_before  example_03_clpping_16__cohen_sutherland_cross_after  example_04_transitions_17__initial  example_04_transitions_18__move  example_04_transitions_19__stretching  example_04_transitions_20__rotation  example_05_shaders_21__initial  example_05_shaders_22__pixel_shader_concept_invert  example_05_shaders_23__vertex_shader_concept_gradient  example_05_shaders_24__vertex_shader_concept_gradient2  example_05_shaders_25__vertex_shader_concept_gradient3  renderalgo
src/: CMakeLists.txt  main.cpp
src/canvas2dViewers/: Canvas2dViewerInterface.h  GlutViewerSimple.cpp  GlutViewerSimple.h  PpxCanvas2dViewer.cpp  PpxCanvas2dViewer.h  TerminalCanvas2dViewer.cpp  TerminalCanvas2dViewer.h  canvas2d_viewer_interface.h  glut_viewer_simple.h  ppx_canvas2d_viewer.cpp  ppx_canvas2d_viewer.h  terminal_canvas2d_viewer.cpp  terminal_canvas2d_viewer.h
src/core/canvas2d/: AlgorithmProxy.cpp  AlgorithmProxy.h  Canvas2d.cpp  Canvas2d.h  DrawCircuit2dVisitor.cpp  DrawCircuit2dVisitor.h  DrawFigure2dVisitor.cpp  DrawFigure2dVisitor.h  DrawShape2dVisitor.cpp  DrawShape2dVisitor.h  PixelBuffer.cpp  PixelBuffer.h  Rectangular1dDotBuffer.cpp  Rectangular1dDotBuffer.h  RectangularPixelBuffer.cpp  RectangularPixelBuffer.h  rendering_algorithm_registry.inc
src/core/figures2d/: CircuitBase.cpp  CircuitBase.h  DrawableInterface.h  Figure2dVisitor.h  Figures2dTypeRegistry.h  ShapeBase.cpp  ShapeBase.h  border.h  circuit_base.cpp  circuit_base.h  drawable_interface.h  figure2d_visitor.h  point2d.h  shape_base.cpp  shape_base.h
src/core/figures2d/circuits/: Circle.cpp  Circle.h  Dot.cpp  Dot.h  LineSegment.cpp  LineSegment.h  Quadrangle.cpp  Quadrangle.h  Triangle.cpp  Triangle.h  circle.cpp  circle.h  dot.cpp  dot.h  line_segment.cpp  line_segment.h  quadrangle.cpp  quadrangle.h  triangle.cpp  triangle.h
src/core/figures2d/visitors/: DrawCircuit2dVisitor.cpp  DrawCircuit2dVisitor.h  DrawShape2dVisitor.cpp  DrawShape2dVisitor.h  draw_circuit2d_visitor.cpp  draw_circuit2d_visitor.h  draw_shape2d_visitor.cpp  draw_shape2d_visitor.h
src/core/pipeline/: AlgorithmProxy.cpp  AlgorithmProxy.h  Canvas2d.h  ClippingRectangularWindow.cpp  ClippingRectangularWindow.h  DEFAULT_PIPELINE_VALUES.h  DotLinearBuffer2d.cpp  DotLinearBuffer2d.h  DrawingMode.h  INIT_GUARD_MACRO.inc  Pipeline.cpp  Pipeline.h  PipelineTargets.h  PixelBuffer2d.cpp  PixelBuffer2d.h  RasterizerSimple.cpp  RasterizerSimple.h  RenderingTargetBase.h  SpaceCoordinateTranslatorSimple.cpp  SpaceCoordinateTranslatorSimple.h  algorithm_proxy.cpp  algorithm_proxy.h  canvas2d.h  clipping_rectangular_window.cpp  clipping_rectangular_window.h  dot_linear_buffer2d.cpp  dot_linear_buffer2d.h  pipeline.cpp  pipeline.h  pixel_buffer2d.cpp  pixel_buffer2d.h  rasterizer_simple.cpp  rasterizer_simple.h  renderer.cpp  renderer.h  rendering_target_base.h  space_coordinate_translator_simple.cpp  space_coordinate_translator_simple.h
src/core/rendering2d/: algorithms_registry.h  algorithms_types.h
src/core/rendering2d/circuits/: algorithms_circle.cpp  algorithms_circle.h
src/core/rendering2d/clipping/: algorithm_clipping_cohen_sutherland_int.cpp  algorithm_clipping_cohen_sutherland_int.h  algorithm_clipping_cyrus_beck_int.cpp  algorithm_clipping_cyrus_beck_int.h
src/core/rendering2d/filling/: algorithm_filling_3v_line_sweeping.cpp  algorithm_filling_3v_line_sweeping.h  algorithms_filling_naive.cpp  algorithms_filling_naive.h
src/core/rendering2d/line/: algorithms_line_classic.cpp  algorithms_line_classic.h  algorithms_lines_naive.cpp  algorithms_lines_naive.cpp.autosave  algorithms_lines_naive.h  algorithms_naive.cpp  algorithms_naive.h
src/example_runner/: ExampleRunner.cpp  ExampleRunner.h  example_runner.cpp  example_runner.h
src/examples/: ExamplePackBase.cpp  ExamplePackBase.h  example_pack_base.cpp  example_pack_base.h  examples_types.h
src/examples/cartesian2d/: 01_Elemantary.h  01_Elementary.cpp  01_elemantary.h  01_elementary.cpp  02_Shapes.cpp  02_Shapes.h  02_shapes.cpp  02_shapes.h  03_Clipping.cpp  03_Clipping.h  03_clipping.cpp  03_clipping.h  04_Transitions.cpp  04_Transitions.h  04_transitions.cpp  04_transitions.h  05_Shaders.cpp  05_Shaders.h  05_shaders.cpp  05_shaders.h
src/ra_services/color_rgb/: ColorMap.cpp  ColorMap.h  color_map.cpp  color_map.h
src/ra_services/geo_trans_homogen_coord/: MatrixCalculatorSimple.cpp  MatrixCalculatorSimple.h  geometry_types.cpp  geometry_types.h  matrix_calculator_simple.cpp  matrix_calculator_simple.h
src/ra_services/get_string/: get_string_pipeline.h  get_string_types.h  ra_get_string.h
src/ra_services/math2d/: math2d.h
src/ra_types/: Axes.h  Direction1d.h  Directions.h  GetString.h  Space1i.h  color.h  displacement2d.h  image_types.h  pointXi.h  ra_types.h  rgb888.cpp  rgb888.h  space1i.h  typedefs.h
src/ra_types/2d/: Space2i.h  ViewDirection2d.h  displacement2i.h  distance2ui.h  point2i.h  space2i.h
